fixed issue in transaction screen when tx data squashed content

--- a/src/Components/Transactions/TransactionsScreen.scss
+++ b/src/Components/Transactions/TransactionsScreen.scss
@@ -1,10 +1,4 @@
 .TransactionsScreen {
-  display: flex;
-  flex-direction: column;
-
-  height: 100%;
-  width: 100%;
-
   > main {
     padding: 0;
   }
